--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "t9_frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.9.0",
+    "node": "8.9.4"
+  },
   "dependencies": {
     "eslint": "^4.6.1",
     "prop-types": "^15.5.10",
